Finished Raid Attendance tracker.

--- a/templates/attendance.twig
+++ b/templates/attendance.twig
@@ -1,11 +1,17 @@
 <tr>
 	<td class="{{ player.class|cssClass }}">{{ player.name }}</td>
 	<td class="center">{{ player.ilvl }}</td>
-	{% for data in events %}
-		{% if data.id is keyin(player.events) %}
-			<td><div rel="tooltip" data-original-title="{{ player.events[data.id].status|lower|ucwords }}" class="{{ player.events[data.id].status|cssClass }} icon ir">{{ player.events[data.id].status|lower|ucwords }}</div></td>
+	{% for event in player.events %}
+		{% if event is not empty %}
+			<td>
+				<div rel="tooltip" data-original-title="{{ event.status|lower|ucwords }}" class="{{ event.status|cssClass }} icon ir">
+					{{ event.status|lower|ucwords }}
+				</div>
+			</td>
 		{% else %}
 			<td></td>
 		{% endif %}
 	{% endfor %}
+	<td class="center">{{ player.total }}</td>
+	<td class="center">{{ player.karma }}</td>
 </tr>
