Removed total column.

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -29,7 +29,7 @@
 					{% for key, data in events %}
 						<td class="center"></td>
 					{% endfor %}
-					<td class="center">{{ total }}</td>
+					<td class="center"></td>
 					<td class="center">{{ karma }}</td>
 				</tr>
 			</tfoot>
