Fixed HTML and added loot section.

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -26,6 +26,7 @@
 						<ul class="nav">
 							<li><a href="#home">Home</a></li>
 							<li><a href="#attendance">Raid Attendance</a></li>
+							<li><a href="#loot">Loot History</a></li>
 						</ul>
 					</div>
 				</div>
@@ -34,7 +35,7 @@
 		<div id="home" class="hero-unit">
 			<div class="container">
 				<h1>{{ config.get("guild.name") }} <small>{{ config.get("guild.realm") }}-{{ config.get("guild.region") }}</small></h1>
-				<p><em>Raid Attendance and Loot Tracker</em></p>
+				<p><em>Raid Attendance and Loot History</em></p>
 			</div>
 		</div>
 		<div class="container">
