--- a/templates/index.twig
+++ b/templates/index.twig
@@ -5,7 +5,8 @@
 	<div id="attendance">
 		<div class="page-header">
 			<h2>Raid Attendance <small>or <em>Who's slacking?</em></small></h2>
-			<table class="table table-striped table-hover">
+		</div>
+		<table class="table table-striped table-hover">
 			<thead>
 				<tr>
 					<th>Player</th>
@@ -34,6 +35,11 @@
 				</tr>
 			</tfoot>
 		</table>
+	</div>
+
+	<div id="loot">
+		<div class="page-header">
+			<h2>Loot History <small>or <em>Who ninja'd what?</em></small></h2>
 		</div>
 	</div>
 
