--- a/templates/index.twig
+++ b/templates/index.twig
@@ -41,6 +41,22 @@
 		<div class="page-header">
 			<h2>Loot History <small>or <em>Who ninja'd what?</em></small></h2>
 		</div>
+		<table class="table table-striped table-hover">
+			<thead>
+				<tr>
+					<th>Date</th>
+					<th>Player</th>
+					<th>Item</th>
+					<th>Zone</th>
+					<th>NPC</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for drop in drops %}
+				    {% include "loot.twig" %}
+				{% endfor %}
+			</tbody>
+		</table>
 	</div>
 
 {% endblock %}
