--- a/templates/base.twig
+++ b/templates/base.twig
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>{{ config.get("guild.name") }}</title>
+		<title>{{ config.guild.name }}</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a href="./" class="brand">{{ config.get("guild.name") }}</a>
+					<a href="./" class="brand">{{ config.guild.name }}</a>
 					<div class="nav-collapse collapse">
 						<ul class="nav">
 							<li><a href="#home">Home</a></li>
@@ -34,7 +34,7 @@
 		</div>
 		<div id="home" class="hero-unit">
 			<div class="container">
-				<h1>{{ config.get("guild.name") }} <small>{{ config.get("guild.realm") }}-{{ config.get("guild.region") }}</small></h1>
+				<h1>{{ config.guild.name }} <small>{{ config.guild.realm }}-{{ config.guild.region }}</small></h1>
 				<p><em>Raid Attendance and Loot History</em></p>
 			</div>
 		</div>
