--- a/templates/base.twig
+++ b/templates/base.twig
@@ -92,57 +92,17 @@
 				</div>
 			</form>
 		</div>
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-		<script src="//login.persona.org/include.js"></script>
-		<script src="//static-azeroth.cursecdn.com/current/js/syndication/tt.js"></script>
-		<script src="js/can.jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/raidtracker.js"></script>
 		<script>
 		{% if user is not null %}
 			var currentUser = "{{ user.email }}";
 		{% else %}
 			var currentUser = null;
 		{% endif %}
-		$('#attendance').tooltip({
-		  selector: "div[rel=tooltip]"
-		});
-		$('#login').on('click', function(){
-			navigator.id.request();
-		});
-		$('#logout').on('click', function(){
-			navigator.id.logout();
-		});
-		$('#addEventForm').on('submit', function(event) {
-			event.preventDefault();
-			$.ajax({
-				type   : 'POST',
-				url    : $(this).attr('action'),
-				data   : $(this).serialize(),
-				success: function(res, status, xhr) { alert("success"); },
-				error  : function(xhr, status, err) { alert("failure"); }
-			});
-		});
-		navigator.id.watch({
-			loggedInUser: currentUser,
-			onlogin: function(assertion) {
-				$.ajax({
-					type   : 'POST',
-					url    : '/login',
-					data   : {assertion: assertion},
-					success: function(res, status, xhr) { window.location.reload(); },
-					error  : function(xhr, status, err) { alert("login failure"); }
-				});
-			},
-			onlogout: function() {
-				$.ajax({
-					type   : 'POST',
-					url    : '/logout',
-					success: function(res, status, xhr) { window.location.reload(); },
-					error  : function(xhr, status, err) { alert("logout failure"); }
-				});
-			}
-		});
 		</script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+		<script src="//login.persona.org/include.js"></script>
+		<script src="//static-azeroth.cursecdn.com/current/js/syndication/tt.js"></script>
+		<script src="/js/bootstrap.min.js"></script>
+		<script src="/js/raidtracker.js"></script>
 	</body>
 </html>
