Added better error handling for ajax requests.

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -60,6 +60,7 @@
 			</div>
 		</div>
 		<div class="container">
+			<div id="notification-holder"></div>
 			{% block content %}{% endblock %}
 		</div>
 		<footer class="footer">
@@ -86,7 +87,9 @@
 		<script src="//static-azeroth.cursecdn.com/current/js/syndication/tt.js"></script>
 		<script src="/js/bootstrap.min.js"></script>
 		<script src="/js/handlebars.runtime-1.0.rc.1.min.js"></script>
+		<script src="/js/jquery.scrollTo.min.js"></script>
 		<script src="/js/raidtracker.js"></script>
 		<script src="/tpl/addDrop.js"></script>
+		<script src="/tpl/error.js"></script>
 	</body>
 </html>
