Moved every modal to handlebars and implemented feedback on successful additions.

--- a/templates/addDrop.handlebars
+++ b/templates/addDrop.handlebars
@@ -5,6 +5,7 @@
 			<h3 id="addDropLabel">Add Drop</h3>
 		</div>
 		<div class="modal-body">
+			<div id="notification-modal-holder"></div>
 			<label>Event</label>
 			<select name="event">
 				{{#each events}}
