Added "Add Player" frontend functionality.

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -39,7 +39,7 @@
 											<li><a href="javascript:void(0)" id="addDrop">Add Drop</a></li>
 											<li><a href="javascript:void(0)" id="addEvent">Add Event</a></li>
 											<li><a href="javascript:void(0)" id="addItem">Add Item</a></li>
-											<li><a href="#addPlayer" data-toggle="modal">Add Player</a></li>
+											<li><a href="javascript:void(0)" id="addPlayer">Add Player</a></li>
 											<li class="divider"></li>
 										{% endif %}
 										<li><a id="logout" href="javascript:void(0)">Logout</a></li>
@@ -141,6 +141,7 @@
 		<script src="/tpl/addDrop.js"></script>
 		<script src="/tpl/addEvent.js"></script>
 		<script src="/tpl/addItem.js"></script>
+		<script src="/tpl/addPlayer.js"></script>
 		<script src="/tpl/error.js"></script>
 		<script src="/tpl/success.js"></script>
 	</body>
