--- a/templates/base.twig
+++ b/templates/base.twig
@@ -138,11 +138,6 @@
 		<script src="/js/handlebars.runtime-1.0.rc.1.min.js"></script>
 		<script src="/js/jquery.scrollTo.min.js"></script>
 		<script src="/js/raidtracker.js"></script>
-		<script src="/tpl/addDrop.js"></script>
-		<script src="/tpl/addEvent.js"></script>
-		<script src="/tpl/addItem.js"></script>
-		<script src="/tpl/addPlayer.js"></script>
-		<script src="/tpl/error.js"></script>
-		<script src="/tpl/success.js"></script>
+		<script src="/js/templates.js"></script>
 	</body>
 </html>
